--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://scriptpi01.github.io/",
+  "homepage": "https://scriptpi01.github.io/Cheap-Ecommerce/",
   "name": "cheap-ecommerce",
   "private": true,
   "version": "0.0.0",
@@ -8,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.19",
@@ -33,6 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "gh-pages": "^6.1.1",
     "postcss": "^8.4.38",
+    "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   }
