Update project files and redeploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://scriptpi01.github.io/Cheap-Ecommerce/",
+  "homepage": "https://scriptpi01.github.io/Cheap-Ecommerce",
   "name": "cheap-ecommerce",
   "private": true,
   "version": "0.0.0",
